<resources>
    <string name="app_name">SleepTight</string>

    <!--  menu labels  -->
    <string name="home_label">Home</string>
    <string name="nap_label">Nap</string>
    <string name="naps_label">Naps</string>
    <string name="all_naps_label">All Naps</string>
    <string name="settings_label">Settings</string>
    <string name="player_label">Player</string>
    <string name="analytics_label">Analytics</string>
    <string name="media_player_label">Media Player</string>
    <string name="more_options_label">More options</string>

    <!--  button labels  -->
    <string name="next_label">Next</string>
    <string name="done_label">Done</string>
    <string name="add_new_nap_label">Add new nap</string>
    <string name="delete_nap_label">Delete nap</string>
    <string name="share_nap_label">Share nap</string>
    <string name="edit_profile_label">Edit profile</string>
    <string name="share_profile_label">Share profile</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="share_label">share</string>

    <!--  nap labels  -->
    <string name="date_label">Date</string>
    <string name="start_time_label">Start time</string>
    <string name="end_time_label">End time</string>
    <string name="observation_label">Observations</string>
    <string name="date_tag">Date:</string>
    <string name="start_time_tag">Start time:</string>
    <string name="end_time_tag">End time:</string>
    <string name="last_nap_label">Last nap</string>
    <string name="last_nap_date_label">Last nap date</string>
    <string name="last_nap_sleeping_time_label">Last nap sleeping time</string>
    <string name="sleeping_time_label">Sleeping Time</string>
    <string name="naps_per_week_label">Naps per week</string>
    <string name="naps_per_month_label">Naps per months</string>
    <string name="naps_per_shift_label">Naps per shift</string>
    <string name="title_and_observations_label">Title and Observations</string>
    <string name="insert_title_label">Insert the title</string>
    <string name="insert_date_label">Insert the date</string>
    <string name="insert_start_time_label">Insert the start time</string>
    <string name="insert_end_time_label">Insert the end time</string>
    <string name="insert_observations_label">Insert observations</string>

    <!--  Settings labels  -->
    <string name="birth_time_label">Birth time</string>
    <string name="birth_local_label">From</string>
    <string name="birth_date_label">Date of birth</string>
    <string name="measuring_label">Measuring</string>
    <string name="weighing_label">weighing</string>
    <string name="height_label">%.1fcm</string>
    <string name="height_tag">Height: %.1fcm</string>
    <string name="weight_label">%.1fkg</string>
    <string name="weight_tag">Weight: %.1fkg</string>
    <string name="title_label">Title</string>
    <string name="new_value_label">New value</string>
    <string name="new_local_label">New local</string>
    <string name="new_height_label">New height</string>
    <string name="new_weight_label">New weight</string>
    <string name="baby_profile_label">Baby profile</string>
    <string name="place_day_time_label">Place, day and ime of birth</string>
    <string name="baby_measurements_birth_label">Baby measurements at birth</string>

    <!--  Login labels  -->
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="baby_photo_label">Baby photo</string>
    <string name="create_account_label">Create Account</string>
    <string name="already_have_account_label">Already have an account?</string>
    <string name="baby_name_label">Baby name</string>
    <string name="birthplace_label">Birthplace</string>
    <string name="birth_height_label">Height in cm</string>
    <string name="birth_weight_label">Weight in kg</string>
    <string name="birth_information_label">Birth information</string>
    <string name="login_error_label">Login error</string>
    <string name="create_account_error_label">Error creating account</string>
    <string name="insert_email_label">Insert your email</string>
    <string name="insert_password_label">Insert your password</string>
    <string name="insert_username_label">Insert your username</string>
    <string name="insert_baby_name_label">Insert the baby name</string>
    <string name="insert_birthplace_label">Insert the birthplace</string>
    <string name="insert_height_label">Insert the height</string>
    <string name="insert_weight_label">Insert the weight</string>
    <string name="confirm_login_label">Confirm login</string>
    <string name="hide_password_label">Hide password</string>
    <string name="show_password_label">Show password</string>

    <!--  Chart colors  -->
    <string name="chart_background_color">#d6d6d6</string>
    <string name="chart_primary_color">#333533</string>
    <string name="chart_bar_main_color">#79c5c8</string>
    <string name="chart_bar_second_color">#786e82</string>

    <!--  Chart labels  -->
    <string name="month_chart_label">Nap Month Chart</string>
    <string name="week_chart_label">Nap Week Chart</string>
    <string name="baby_status_chart_label">BabyStatus Chart</string>
    <string name="naps_chart_label">Naps Chart</string>
    <string name="all_naps_chart_label">All Naps</string>
    <string name="all_nap_charts_label">All Charts Nap</string>
    <string name="shift_chart_label">Naps Per shift Chart</string>
    <string name="average_hours_label">Average hours</string>
    <string name="average_hour_per_week_label">Average hours per weekday</string>
    <string name="average_hour_per_month_label">Average hours per month of the year</string>
    <string name="baby_development_label">Baby development</string>
    <string name="baby_status_chart_description_label">Chart with the baby development</string>
    <string name="week_description_label">Chart with naps per weekday</string>
    <string name="month_description_label">Chart with naps per month</string>
    <string name="naps_description_label">Chart with all naps</string>
    <string name="shift_description_label">Chart with naps per shift</string>
    <string name="day_label">Day</string>
    <string name="night_label">Night</string>
    <string name="share_nap_chart_label">Share chart</string>

    <!--  Days of te week  -->
    <string name="sunday_label">Sunday</string>
    <string name="monday_label">Monday</string>
    <string name="tuesday_label">Tuesday</string>
    <string name="wednesday_label">Wednesday</string>
    <string name="thursday_label">Thursday</string>
    <string name="friday_label">Friday</string>
    <string name="saturday_label">Saturday</string>

    <!--  Months of day  -->
    <string name="january_label">January</string>
    <string name="february_label">February</string>
    <string name="march_label">March</string>
    <string name="april_label">April</string>
    <string name="may_label">May</string>
    <string name="june_label">June</string>
    <string name="july_label">July</string>
    <string name="august_label">August</string>
    <string name="september_label">September</string>
    <string name="october_label">October</string>
    <string name="november_label">November</string>
    <string name="december_label">December</string>

    <!--  Colors of the month  -->
    <string name="january_light_blue_label">#ADD8E6</string>
    <string name="february_pink_label">#FFC0CB</string>
    <string name="march_purple_label">#A020F0</string>
    <string name="april_grass_green_label">#7CFC00</string>
    <string name="may_lilac_label">#C8A2C8</string>
    <string name="june_pearl_label">#E2DFD2</string>
    <string name="july_yellow_label">#FFFF00</string>
    <string name="august_orange_label">#FFA500</string>
    <string name="september_bright_blue_label">#0096FF</string>
    <string name="october_indigo_label">#4B0082</string>
    <string name="november_gold_label">#FFD700</string>
    <string name="december_dark_red_label">#8B0000</string>

    <!-- Media player labels -->
    <string name="shuffle_on_description">Enable shuffle mode</string>
    <string name="shuffle_off_description">Disable shuffle mode</string>
    <string name="notification_channel_name">Playback cannot be resumed</string>
    <string name="notification_content_title">Playback cannot be resumed</string>
    <string name="notification_content_text">Press on the play button on the media notification if it
    is still present, otherwise please open the app to start the playback and re-connect the session
    to the controller</string>
    <string name="shuffle_label">Shuffle</string>
    <string name="repeat_label">Repeat</string>
    <string name="playlist_label">Playlist</string>
    <string name="song_title_label">Song title</string>
    <string name="song_artist_label">%s -\u0020</string>
    <string name="song_album_label">Album</string>

    <!--  Baby Status labels  -->
    <string name="baby_status_label">Baby Status</string>
    <string name="baby_status_title_and_date">Title and Date</string>
    <string name="baby_status_height_and_weight">Height and Weight</string>
    <string name="add_new_baby_status_label">Add new baby status</string>
    <string name="delete_baby_status_label">Delete Baby Status</string>
    <string name="all_baby_status_label">All baby status</string>
    <string name="current_baby_status_label">Current baby status</string>
    <string name="insert_hours_label">Insert the hours</string>
    <string name="insert_description_label">Insert description</string>
    <string name="last_baby_status_label">Last baby measurements</string>

    <!--  Lists label  -->
    <string name="lists_label">Lists</string>
    <string name="list_notification_label">List with all notifications</string>
    <string name="list_naps_label">List with all naps</string>
    <string name="list_baby_status_label">List with all baby status</string>

    <!--  Notifications label  -->
    <string name="notifications_label">Notifications</string>
    <string name="notification_label">Notification</string>
    <string name="new_notification_label">New Notification</string>
    <string name="add_new_notification">Add new notification</string>
    <string name="repeat_notification_label">Repeat notification</string>
    <string name="on_label">On</string>
    <string name="off_label">Off</string>
    <string name="description_label">Description</string>
    <string name="hour_label">Hour</string>
    <string name="last_notification_label">Last notification</string>
    <string name="last_notification_date_label">Last notification date</string>

    <!--  Common labels  -->
    <string name="add_button">Add button</string>
    <string name="delete_label">Delete</string>
    <string name="up_button_label">Up button</string>

    <!--  Home labels  -->
    <string name="home_baby_name_label">Baby status:</string>
    <string name="home_height_label">Height:</string>
    <string name="home_weight_label">Weight:</string>
    <string name="home_title_label">Title:</string>
    <string name="home_sleeping_time_label">Sleeping time:</string>
    <string name="home_last_status">Last Status</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
    <string name="welcome_label">Welcome %s \u0026 %s</string>
    <string name="home_last_measurements_label">
        The last measurements were on %s, with a height of %s and a weight of %s.
    </string>
    <string name="home_last_nap_label">The last nap was on %s, with a sleep duration of %s.</string>
    <string name="home_last_notification_label">
        The last notification was on %s with this title: %s.
    </string>
</resources>