<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share_nap_chart_label"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/chart_more_options"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/more_options_label"
        app:showAsAction="always">

        <menu>
            <group>
                <item
                    android:id="@+id/all_nap_chart"
                    android:title="@string/all_naps_label" />

                <item
                    android:id="@+id/month_nap_chart"
                    android:title="@string/naps_per_month_label" />
                <item
                    android:id="@+id/week_nap_chart"
                    android:title="@string/naps_per_week_label" />
                <item
                    android:id="@+id/shift_nap_chart"
                    android:title="@string/naps_per_shift_label" />
            </group>
        </menu>
    </item>
</menu>