<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/home_navigation"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home_label" />

    <item
        android:id="@id/naps_navigation"
        android:icon="@drawable/baseline_list_24"
        android:title="@string/naps_label" />

    <item
        android:id="@id/media_player_navigation"
        android:icon="@drawable/baseline_music_note_24"
        android:title="@string/player_label" />

    <item
        android:id="@id/analytics_navigation"
        android:icon="@drawable/baseline_bar_chart_24"
        android:title="@string/analytics_label" />

    <item
        android:id="@+id/settings_navigation"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_label" />
</menu>