<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.bruno13palhano.sleeptight.ui.login.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/home_navigation"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_login_to_createAccount"
            app:destination="@id/createAccountFragment" />
    </fragment>

    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.bruno13palhano.sleeptight.ui.createaccount.CreateAccountFragment"
        android:label="@string/create_account_label"
        tools:layout="@layout/fragment_create_account">

        <action
            android:id="@+id/action_createAccount_to_babyName"
            app:destination="@id/babyNameAccountFragment" />
    </fragment>

    <fragment
        android:id="@+id/babyNameAccountFragment"
        android:name="com.bruno13palhano.sleeptight.ui.createaccount.BabyNameAccountFragment"
        android:label="@string/baby_name_label"
        tools:layout="@layout/fragment_baby_name_account">

        <action
            android:id="@+id/action_babyName_to_bayBirthplace"
            app:destination="@id/babyBirthplaceAccountFragment" />
    </fragment>

    <fragment
        android:id="@+id/babyBirthplaceAccountFragment"
        android:name="com.bruno13palhano.sleeptight.ui.createaccount.BabyBirthplaceAccountFragment"
        android:label="@string/birthplace_label"
        tools:layout="@layout/fragment_baby_birthplace_account">

        <action
            android:id="@+id/action_babyBirthplace_to_babyBirth"
            app:destination="@id/babyBirthAccountFragment" />
    </fragment>

    <fragment
        android:id="@+id/babyBirthAccountFragment"
        android:name="com.bruno13palhano.sleeptight.ui.createaccount.BabyBirthAccountFragment"
        android:label="@string/birth_information_label"
        tools:layout="@layout/fragment_baby_birth_account">

        <action
            android:id="@+id/action_babyBirth_to_home"
            app:destination="@id/home_navigation"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>