<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.mediaplayer.MediaPlayerFragment">

        <androidx.media3.ui.AspectRatioFrameLayout
            android:id="@+id/player_frame"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <androidx.media3.ui.PlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:show_shuffle_button="true"
                app:repeat_toggle_modes="one|all"
                app:use_artwork="true" />
        </androidx.media3.ui.AspectRatioFrameLayout>

        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingHorizontal="16dp"
            android:hint="@string/song_title_label"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:hint="@string/song_artist_label"
                android:textStyle="italic|bold"/>
            <TextView
                android:id="@+id/song_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/song_album_label" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/playlist_label"
            android:textSize="16sp"
            android:textStyle="italic" />

        <ListView
            android:id="@+id/current_playing_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>